# electron_specific_heat

./: .gitignore  CMakeLists.txt  env.sh
config/: BBparam.txt  energyLevel.txt  ionize.txt
include/: CalcMaterial.h  Experiment.h  Plot.h  algorithm.h  constants.h  formulas.h  materials.h
python/: calculateIntegra.py  effusion.py
script/: gif.sh  plot.ps
src/: CalcMaterial.C  Plot.cc  algorithm.C  formulas.C
test/: test.C
util/: FV_1D.C  fibre.C  main.C  plasma_sim.C  simpleSim.C  simplot.C  test.C  vdWEOS.C
